# trivial-wire

./: LICENSE  README.md  Tests.hs  trivial-wire.cabal
Control/Arrow/: Signal.hs
Control/Arrow/Class/: Rutten.hs
Control/FRP/: Signal.hs  Wire.hs
Control/FRP/Wire/: Utils.hs
